--- a/projects/junit5_introduction/build.gradle
+++ b/projects/junit5_introduction/build.gradle
@@ -13,6 +13,8 @@ plugins {
     // Apply the application plugin to add support for building a CLI application
     id 'application'
     id 'idea'
+    id 'maven'
+    id 'com.adarshr.test-logger' version '2.0.0'
 }
 
 repositories {
@@ -22,22 +24,17 @@ repositories {
 }
 
 dependencies {
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:28.0-jre'
-
-    // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-
-    // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+}
+test {
+    exclude 'com/newjava/junit5/CustomStringUtilsTest.class'
+    useJUnitPlatform()
 }
 
 application {
     // Define the main class for the application
-    mainClassName = 'junit5_introduction.App'
+    mainClassName = 'com.newjava.junit5.App'
 }
 
-test {
-    // Use junit platform for unit tests
-    useJUnitPlatform()
-}
+
