--- a/projects/junit5_introduction/build.gradle
+++ b/projects/junit5_introduction/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testImplementation "org.mockito:mockito-core:3.+"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
 test {
